--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "node-api",
-  "version": "0.0.0",
-  "private": true,
+  "name": "library-management-system",
+  "version": "1.0.0",
+  "description": "Project done by Vedavathi and Neeru Rani",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/attainu/Library-Management-System.git"
+  },
+  "keywords": [],
+  "author": "Neeru Rani and Vedavathi G H",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/attainu/Library-Management-System/issues"
+  },
+  "homepage": "https://github.com/attainu/Library-Management-System#readme",
   "dependencies": {
-    "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
+    "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "express-validator": "^6.4.0",
-    "hbs": "~4.0.4",
-    "http-errors": "~1.6.3",
-    "jest": "^25.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.5",
-    "morgan": "~1.9.1",
-    "nodemailer": "^6.4.6",
-    "pg": "^7.18.2",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.9.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
