--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "nodemailer": "^6.4.6",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5"
-  },
-  "devDependencies": {
+    "sequelize": "^5.21.5",
     "nodemon": "^2.0.2"
   }
 }
