--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "nodemon": "^2.0.2",
     "method-override": "^3.0.0",
     "node-fetch": "^2.6.0"
+  },
+  "engines": {
+    "node": "12.16.x"
   }
 }
