--- a/package.json
+++ b/package.json
@@ -29,9 +29,17 @@
     "express-validator": "^6.4.0",
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.5",
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.4.6",
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.5",
+    "nodemon": "^2.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^5.9.6",
-    "morgan": "^1.10.0",
     "node-fetch": "^2.6.0"
+  },
+  "engines": {
+    "node": "12.16.x"
   }
 }
