--- a/package.json
+++ b/package.json
@@ -1,43 +1,31 @@
 {
-  "name": "library-management-system",
+  "name": "project-by-sequelize",
   "version": "1.0.0",
-  "description": "Project done by Vedavathi and Neeru Rani",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/attainu/Library-Management-System.git"
-  },
-  "keywords": [],
-  "author": "Neeru Rani and Vedavathi G H",
+  "author": "neeru",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/attainu/Library-Management-System/issues"
-  },
-  "homepage": "https://github.com/attainu/Library-Management-System#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
+    "nodemon": "^2.0.2",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
+    "env": "0.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
-    "hbs": "^4.1.1",
+    "hbs": "^4.1.0",
+    "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.5",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.4.6",
-    "pg": "^7.18.2",
+    "pg": "^8.0.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5",
-    "nodemon": "^2.0.2",
-    "method-override": "^3.0.0",
-    "node-fetch": "^2.6.0"
+    "sequelize": "^5.21.5"
   },
   "engines": {
     "node": "12.16.x"
